force-app/main/default/objects/AMCM__c/AMCM__c.object-meta.xml
<CustomObject>
    <description>AG=Adicional o gestionado
Para cubrir dos casos de uso:

RT Gestionado:
Los miembros de campaña cerrados se vuelcan en este objeto para conservarlos por motivos de analítica, y de ese modo en el objeto miembro de campaña estándar se eliminan y ya no entorpecen (y se puede volver a crear otro miembro asociado al mismo lead o contacto en la misma campaña)

RT Adicional: cuando un lead o contacto no puede insertarse más de una vez en una campaña se insertará en forma de Miembro de campaña AG, no como Miembro de campaña estándar</description>
    <label>Miembro de campaña AG</label>
    <nameField>
        <displayFormat>AMCM{00000000}</displayFormat>
        <label>Número de Miembro de campaña AG</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Miembros de campaña AG</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>