force-app/main/default/objects/AMCM__c/fields/AgentAttempts__c.field-meta.xml
<CustomField>
    <fullName>AgentAttempts__c</fullName>
    <label>Número de intentos de agente</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>