force-app/main/default/objects/AMCM__c/fields/AgeRange__c.field-meta.xml
<CustomField>
    <fullName>AgeRange__c</fullName>
    <description>Describe en qué rango de edad está.</description>
    <label>Rango de Edad</label>
    <length>20</length>
    <type>Text</type>
</CustomField>