force-app/main/default/objects/AMCM__c/fields/AmountMerchandise__c.field-meta.xml
<CustomField>
    <fullName>AmountMerchandise__c</fullName>
    <description>Importe de la mercancía. Este campo viajará del Lead al Miembro de campaña y Miembro campaña AG</description>
    <label>Importe Mercancía</label>
    <length>20</length>
    <type>Text</type>
</CustomField>