force-app/main/default/objects/AMCM__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <description>Indica la fecha de nacimiento.</description>
    <label>Fecha de Nacimiento</label>
    <type>Date</type>
</CustomField>