force-app/main/default/objects/AMCM__c/fields/BusinessLinesContracted__c.field-meta.xml
<CustomField>
    <fullName>BusinessLinesContracted__c</fullName>
    <label>Ramos Contratados</label>
    <length>255</length>
    <type>Text</type>
</CustomField>