force-app/main/default/objects/AMCM__c/fields/BusinessLinesProhibited__c.field-meta.xml
<CustomField>
    <fullName>BusinessLinesProhibited__c</fullName>
    <description>Ramos contratados en lead y cliente viene de la integración con SGC por lo que no podemos trasladar los campos a miembros de campaña, así que recogemos la información a través de campos fórmulas,</description>
    <formula>IF(ISBLANK(Contact__c ),  Lead__r.businesslines_prohibited__c  ,  Contact__r.businesslines_prohibited__c  )</formula>
    <label>Ramos Prohibidos</label>
    <type>Text</type>
</CustomField>