force-app/main/default/objects/AMCM__c/fields/BussinesLineContracted__c.field-meta.xml
<CustomField>
    <fullName>BussinesLineContracted__c</fullName>
    <description>Muestra que tiene contratado.</description>
    <formula>IF(ISBLANK(TEXT( LineInsurance__c)) = TRUE, FALSE, CONTAINS( BusinessLinesContracted__c , UPPER(TEXT(LineInsurance__c)) ))</formula>
    <label>Ramo Contratado</label>
    <type>Checkbox</type>
</CustomField>