force-app/main/default/objects/AMCM__c/fields/BussinesLineProhibited__c.field-meta.xml
<CustomField>
    <fullName>BussinesLineProhibited__c</fullName>
    <description>Muestra ramo prohibido.</description>
    <formula>IF( ISBLANK(TEXT( LineInsurance__c )) = TRUE, FALSE, CONTAINS(  BusinessLinesProhibited__c , UPPER(TEXT(LineInsurance__c )) ))</formula>
    <label>Ramo Prohibido</label>
    <type>Checkbox</type>
</CustomField>