force-app/main/default/objects/AMCM__c/fields/CallIdentifier__c.field-meta.xml
<CustomField>
    <fullName>CallIdentifier__c</fullName>
    <description>Guarda el Id de la llamada.</description>
    <label>Call Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>