force-app/main/default/objects/AMCM__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <description>Nombre de la campaña</description>
    <label>Campaña</label>
    <length>255</length>
    <type>Text</type>
</CustomField>