force-app/main/default/objects/AMCM__c/fields/CampaignCess__c.field-meta.xml
<CustomField>
    <fullName>CampaignCess__c</fullName>
    <description>Selecciona el tipo de Seguro.</description>
    <label>Campaña - CESS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CESSCampana</valueSetName>
    </valueSet>
</CustomField>