force-app/main/default/objects/AMCM__c/fields/CampaignCessELIMINAR__c.field-meta.xml
<CustomField>
    <fullName>CampaignCessELIMINAR__c</fullName>
    <description>Selecciona el tipo de Seguro</description>
    <label>Campaña - CESS ELIMINAR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>