force-app/main/default/objects/AMCM__c/fields/CampaignCTI2__c.field-meta.xml
<CustomField>
    <fullName>CampaignCTI2__c</fullName>
    <description>Relacionado con Lead Campaign_CTI_Picklist__c</description>
    <label>Campaña CTI ELIMINAR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>