force-app/main/default/objects/AMCM__c/fields/CampaignCTI__c.field-meta.xml
<CustomField>
    <fullName>CampaignCTI__c</fullName>
    <description>Relacionado con Lead Campaign_CTI_Picklist__c</description>
    <label>Campaña CTI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CESSCampanaCTI</valueSetName>
    </valueSet>
</CustomField>