force-app/main/default/objects/AMCM__c/fields/CampaignMemberNumber__c.field-meta.xml
<CustomField>
    <fullName>CampaignMemberNumber__c</fullName>
    <description>Número de miembro de campaña (CampaignMember) de la tabla CampaignMember</description>
    <label>Número de miembro de campaña</label>
    <length>15</length>
    <type>Text</type>
</CustomField>