force-app/main/default/objects/AMCM__c/fields/CampaignTypeCESS__c.field-meta.xml
<CustomField>
    <fullName>CampaignTypeCESS__c</fullName>
    <description>Valores de lista para indicar el tipo de campaña.</description>
    <label>Tipo de Campaña - CESS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CESSTipoCampana</valueSetName>
    </valueSet>
</CustomField>