force-app/main/default/objects/AMCM__c/fields/CampainMemberRelated__c.field-meta.xml
<CustomField>
    <fullName>CampainMemberRelated__c</fullName>
    <description>Miembro de campaña MKT eliminado y que se ha trasladado cómo miembro de campaña gestionado</description>
    <externalId>true</externalId>
    <label>Miembro de campaña relacionado</label>
    <length>18</length>
    <type>Text</type>
</CustomField>