force-app/main/default/objects/AMCM__c/fields/CESS_IDDisplayAdvertisments__c.field-meta.xml
<CustomField>
    <fullName>CESS_IDDisplayAdvertisments__c</fullName>
    <description>Campo CESS_IDDisplayAdvertisments__c del LEAD para la integración por zappiers de google ads, Creado por MHG directamente en producción para pruebas
ESTE CAMPO HAY QUE BORRARLO CUANDO USEN EN ZAPPIERS EL CAMPO GCLID Y DISPLAYADVERTISMENTS que se cree en Campaignmember (para nuevo lead y para lead existente a través del trigger de Lead) y que se arrastre a Campaignmember AG cuando haya conversión (flow). Este fórmula se mantendrá pero solo para enmascarar y que pase cero cuando sea vacío a zappiers, en vez de tomar el dato de Lead_r lo tomará del propio registro.</description>
    <formula>IF( ISBLANK(Lead__r.CESS_IDDisplayAdvertisments__c) ||  ISNULL(Lead__r.CESS_IDDisplayAdvertisments__c),
    &quot;0&quot;,
    Lead__r.CESS_IDDisplayAdvertisments__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CESS_IDDisplayAdvertisments</label>
    <type>Text</type>
</CustomField>