force-app/main/default/objects/AMCM__c/fields/CESSIdGoogleAnalytics__c.field-meta.xml
<CustomField>
    <fullName>CESSIdGoogleAnalytics__c</fullName>
    <description>Muestra el identificador de Google Analytics.</description>
    <label>ID Google Analytics</label>
    <length>100</length>
    <type>Text</type>
</CustomField>