force-app/main/default/objects/AMCM__c/fields/CESSIdPricing__c.field-meta.xml
<CustomField>
    <fullName>CESSIdPricing__c</fullName>
    <description>Muestra el identificador de tarificación.</description>
    <label>Id Tarificacion</label>
    <length>30</length>
    <type>Text</type>
</CustomField>