force-app/main/default/objects/AMCM__c/fields/CESSScoring__c.field-meta.xml
<CustomField>
    <fullName>CESSScoring__c</fullName>
    <description>Muestra el valor scoring.</description>
    <label>Valor Scoring</label>
    <length>15</length>
    <type>Text</type>
</CustomField>