force-app/main/default/objects/AMCM__c/fields/CMCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CMCreatedDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Almacena la fecha de creación del Miembro de Campaña de origen a partir del cual es creado el Miembro de Campaña Gestionado (para fines de trazabilidad)</description>
    <label>Fecha de creación del interés</label>
    <type>DateTime</type>
</CustomField>