force-app/main/default/objects/AMCM__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Miembros de campaña AG</relationshipLabel>
    <relationshipName>Miembros_de_campa_a_gestionados</relationshipName>
    <type>Lookup</type>
</CustomField>