force-app/main/default/objects/AMCM__c/fields/ConversionDate__c.field-meta.xml
<CustomField>
    <fullName>ConversionDate__c</fullName>
    <description>Fecha y hora de conversión, Cualificación(Lead pasa a Cliente) o No cualificación.</description>
    <label>Fecha de conversión-ELIMINAR</label>
    <type>DateTime</type>
</CustomField>