force-app/main/default/objects/AMCM__c/fields/ConversionDateAG__c.field-meta.xml
<CustomField>
    <fullName>ConversionDateAG__c</fullName>
    <description>Fecha de conversión del CM a AG (CreatedDate), se hace vía fórmula para poder visualizar la fecha y hora en Reportes, ya que si se utiliza CreatedDate solo se visualiza la fecha.</description>
    <formula>CreatedDate</formula>
    <label>Fecha de conversión</label>
    <type>DateTime</type>
</CustomField>