force-app/main/default/objects/AMCM__c/fields/ConvertedLead__c.field-meta.xml
<CustomField>
    <fullName>ConvertedLead__c</fullName>
    <description>Se rellenará cuando se crea la oportunidad</description>
    <label>Lead convertido</label>
    <length>18</length>
    <type>Text</type>
</CustomField>