force-app/main/default/objects/AMCM__c/fields/CTIDeleteError__c.field-meta.xml
<CustomField>
    <fullName>CTIDeleteError__c</fullName>
    <description>Descripción del error en borrado de un CTI.</description>
    <label>Error Borrado CTI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>