force-app/main/default/objects/AMCM__c/fields/CTIDuplicateCheck__c.field-meta.xml
<CustomField>
    <fullName>CTIDuplicateCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Muestra con un check si existen duplicados.</description>
    <label>Error Duplicados CTI</label>
    <type>Checkbox</type>
</CustomField>