force-app/main/default/objects/AMCM__c/fields/CTIError__c.field-meta.xml
<CustomField>
    <fullName>CTIError__c</fullName>
    <description>Error devuelto por CTI al intentar insertar el registro</description>
    <label>Error Envío CTI</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>