force-app/main/default/objects/AMCM__c/fields/CTIErrorCampDesactivada__c.field-meta.xml
<CustomField>
    <fullName>CTIErrorCampDesactivada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Muestra con un check si la campaña ha generado error.</description>
    <label>Error CTI Campaña desactivada</label>
    <type>Checkbox</type>
</CustomField>