force-app/main/default/objects/AMCM__c/fields/CTIErrorCheck__c.field-meta.xml
<CustomField>
    <fullName>CTIErrorCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Muestra si se ha producido algún fallo al enviar CTI.</description>
    <label>Envio Fallido CTI</label>
    <type>Checkbox</type>
</CustomField>