force-app/main/default/objects/AMCM__c/fields/CTIIntergrationStatus__c.field-meta.xml
<CustomField>
    <fullName>CTIIntergrationStatus__c</fullName>
    <description>Muestra el estado de envío del CTI.</description>
    <label>Estado Envio CTI</label>
    <length>80</length>
    <type>Text</type>
</CustomField>