force-app/main/default/objects/AMCM__c/fields/CTIOrder__c.field-meta.xml
<CustomField>
    <fullName>CTIOrder__c</fullName>
    <description>Prioridad de este registro dentro de la campaña CTI para el marcador</description>
    <label>CTI Orden</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>