force-app/main/default/objects/AMCM__c/fields/CTIRule__c.field-meta.xml
<CustomField>
    <fullName>CTIRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regla CTI</label>
    <referenceTo>CTI_Rules__c</referenceTo>
    <relationshipLabel>Miembros de campaña AG</relationshipLabel>
    <relationshipName>Miembros_de_campana_AG</relationshipName>
    <type>Lookup</type>
</CustomField>