force-app/main/default/objects/AMCM__c/fields/CTISend__c.field-meta.xml
<CustomField>
    <fullName>CTISend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcar a verdadero dispara el proceso para insertar este registro en su campaña CTI de marcador</description>
    <label>Enviar CTI</label>
    <type>Checkbox</type>
</CustomField>