force-app/main/default/objects/AMCM__c/fields/CTISent__c.field-meta.xml
<CustomField>
    <fullName>CTISent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcado a verdadero si se ha insertado correctamente en la campaña CTI</description>
    <label>Enviado CTI</label>
    <type>Checkbox</type>
</CustomField>