force-app/main/default/objects/AMCM__c/fields/CTISkill__c.field-meta.xml
<CustomField>
    <fullName>CTISkill__c</fullName>
    <description>Skill de este registro dentro de la campaña CTI</description>
    <label>CTI Skill</label>
    <length>10</length>
    <type>Text</type>
</CustomField>