force-app/main/default/objects/AMCM__c/fields/DateLastCallRecorded__c.field-meta.xml
<CustomField>
    <fullName>DateLastCallRecorded__c</fullName>
    <description>Muestra la fecha en la que se realizó la grabación de la llamada.</description>
    <label>Fecha Grabación de Llamada</label>
    <type>Date</type>
</CustomField>