force-app/main/default/objects/AMCM__c/fields/DateOpportunityClosed__c.field-meta.xml
<CustomField>
    <fullName>DateOpportunityClosed__c</fullName>
    <formula>IF( Opportunity__c!=NULL , Opportunity__r.CloseDate ,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Cierre (Incluye Oportunidad)</label>
    <type>Date</type>
</CustomField>