force-app/main/default/objects/AMCM__c/fields/DatetimeLastCall__c.field-meta.xml
<CustomField>
    <fullName>DatetimeLastCall__c</fullName>
    <description>Fecha/hora de la última llamada hecha por el marcador a este miembro de campaña CTI</description>
    <label>Fecha/hora última llamada</label>
    <type>DateTime</type>
</CustomField>