force-app/main/default/objects/AMCM__c/fields/DescriptionMerchandise__c.field-meta.xml
<CustomField>
    <fullName>DescriptionMerchandise__c</fullName>
    <description>Descripción Mercancía. Este campo deberá viajar del Lead al Miembro de campaña AG</description>
    <label>Descripción Mercancía</label>
    <length>50</length>
    <type>Text</type>
</CustomField>