force-app/main/default/objects/AMCM__c/fields/ECommerceStatus__c.field-meta.xml
<CustomField>
    <fullName>ECommerceStatus__c</fullName>
    <description>Muestra por texto el estado del eCommerce.</description>
    <formula>IF(Opportunity__r.IsWon, &quot;6-Ganado&quot;,
IF(Opportunity__r.IsClosed, &quot;5-Perdido&quot;,
IF(TEXT(Lead__r.Status) = &quot;Qualified&quot; , &quot;4-En Gestión&quot;,
IF(TEXT(Lead__r.Status) = &quot;Unqualified&quot;, &quot;3-No Cualificado&quot;,
IF(TEXT(Lead__r.Status) = &quot;Working&quot;, &quot;2-En Proceso&quot;,
IF(TEXT(Lead__r.Status) = &quot;New&quot;, &quot;1-Nuevo&quot;, &quot;0-NO DEFINIDO&quot;)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado eCommerce</label>
    <type>Text</type>
</CustomField>