force-app/main/default/objects/AMCM__c/fields/EmailSended__c.field-meta.xml
<CustomField>
    <fullName>EmailSended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si se ha enviado email o no, dependiendo del estado del check.</description>
    <label>Email Enviado</label>
    <type>Checkbox</type>
</CustomField>