force-app/main/default/objects/AMCM__c/fields/GCLID__c.field-meta.xml
<CustomField>
    <fullName>GCLID__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <description>ID de clic de Google (Google Ads external Id)</description>
    <label>GCLID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>