force-app/main/default/objects/AMCM__c/fields/IDDisplayAdvertisments__c.field-meta.xml
<CustomField>
    <fullName>IDDisplayAdvertisments__c</fullName>
    <label>ID del display de anuncios</label>
    <type>TextArea</type>
</CustomField>