force-app/main/default/objects/AMCM__c/fields/IdExterno__c.field-meta.xml
<CustomField>
    <fullName>IdExterno__c</fullName>
    <description>Contiene un Identificador único externo y no distingue entre mayúsculas y minúsculas.</description>
    <externalId>true</externalId>
    <label>Id Externo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>