force-app/main/default/objects/AMCM__c/fields/InsuranceCompany__c.field-meta.xml
<CustomField>
    <fullName>InsuranceCompany__c</fullName>
    <description>Compañía de procedencia que debe viajar a oportunidad</description>
    <label>Compañía de procedencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>