force-app/main/default/objects/AMCM__c/fields/InsuredRisk__c.field-meta.xml
<CustomField>
    <fullName>InsuredRisk__c</fullName>
    <description>Posibilidad que se produzca el suceso que provoque el daño. Esta información debe viajar de Lead a miembro de campaña y miembro de campaña adicional o gestionado.</description>
    <label>Riesgo Asegurado</label>
    <length>50</length>
    <type>Text</type>
</CustomField>