force-app/main/default/objects/AMCM__c/fields/IsCustomer__c.field-meta.xml
<CustomField>
    <fullName>IsCustomer__c</fullName>
    <description>Muestra si ya es cliente.</description>
    <formula>NOT(OR(ISNULL(Lead__r.identifier_cess__c),ISBLANK(Lead__r.identifier_cess__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es cliente</label>
    <type>Checkbox</type>
</CustomField>