force-app/main/default/objects/AMCM__c/fields/IsReachable__c.field-meta.xml
<CustomField>
    <fullName>IsReachable__c</fullName>
    <description>Campo calculado en función del estado y resultado del miembro de campaña</description>
    <formula>IF( TEXT(  Status__c  ) = &quot;Qualified&quot; ||
(TEXT (Status__c  ) = &quot;Unqualified&quot; &amp;&amp;
NOT(TEXT( Result__c ) = &apos;Ilocalizable&apos; ||
TEXT( Result__c ) = &apos;No Contesta Enviar Email&apos; ||
TEXT( Result__c ) = &apos;Teléfono Erróneo Enviar Email&apos;||
TEXT (Result__c) = &apos;Llamada cortada&apos;)
), 1 , 0)</formula>
    <label>Contactado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>