force-app/main/default/objects/AMCM__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Miembros de campaña AG</relationshipLabel>
    <relationshipName>managedCMs</relationshipName>
    <type>Lookup</type>
</CustomField>