force-app/main/default/objects/AMCM__c/fields/LeadHeader__c.field-meta.xml
<CustomField>
    <fullName>LeadHeader__c</fullName>
    <description>Campo fórmula que concatena lead_number con sourceCess.</description>
    <formula>Lead__r.lead_number__c  &amp; &quot; | &quot; &amp; SourceCess__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número | Origen</label>
    <type>Text</type>
</CustomField>