force-app/main/default/objects/AMCM__c/fields/LeadOrContactId__c.field-meta.xml
<CustomField>
    <fullName>LeadOrContactId__c</fullName>
    <description>Devuelve el Id del Lead o del Contacto según esté relleno o no el contacto</description>
    <formula>IF(
    OR(ISNULL(Contact__c), ISBLANK(Contact__c)),
    CASESAFEID(Lead__c),
    CASESAFEID(Contact__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeadOrContactId</label>
    <type>Text</type>
</CustomField>