force-app/main/default/objects/AMCM__c/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <description>Lista para seleccionar de dónde llega este candidato.</description>
    <label>Origen del candidato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CESSOrigenCandidato</valueSetName>
    </valueSet>
</CustomField>