force-app/main/default/objects/AMCM__c/fields/LineInsurance__c.field-meta.xml
<CustomField>
    <fullName>LineInsurance__c</fullName>
    <description>Lista que muestra datos del lead o cliente (Auto, Hogar,...).</description>
    <label>Ramo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>line_insurance</valueSetName>
    </valueSet>
</CustomField>