force-app/main/default/objects/AMCM__c/fields/ManagementsCess__c.field-meta.xml
<CustomField>
    <fullName>ManagementsCess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Chechbox que mira si ha sido gestinado.</description>
    <label>Gestiones CESS</label>
    <type>Checkbox</type>
</CustomField>