force-app/main/default/objects/AMCM__c/fields/ManagementsSF__c.field-meta.xml
<CustomField>
    <fullName>ManagementsSF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Muestra un check en caso de haber sido gestionado desde Salesforce.</description>
    <label>Gestiones Salesforce</label>
    <type>Checkbox</type>
</CustomField>