force-app/main/default/objects/AMCM__c/fields/ManagementType__c.field-meta.xml
<CustomField>
    <fullName>ManagementType__c</fullName>
    <description>Se activará cuando el resultado sea Gestión en cartera</description>
    <label>Tipo de Gestión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ManagementType</valueSetName>
    </valueSet>
</CustomField>