force-app/main/default/objects/AMCM__c/fields/MarketingClosed__c.field-meta.xml
<CustomField>
    <fullName>MarketingClosed__c</fullName>
    <description>Muestra el número de cerrados.</description>
    <formula>IF(Opportunity__r.IsClosed || TEXT(Lead__r.Status) = &quot;Unqualified&quot; , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Cerrado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>