force-app/main/default/objects/AMCM__c/fields/MarketingStage__c.field-meta.xml
<CustomField>
    <fullName>MarketingStage__c</fullName>
    <description>usado en reportes de eCommerce.</description>
    <formula>IF(Opportunity__r.IsClosed || TEXT( Status__c ) = &quot;Unqualified&quot; , &quot;Cerrado&quot;,
IF(TEXT(Opportunity__r.StageName) = &quot;Vencimiento Futuro&quot;, &quot;Vencimiento Futuro&quot;,
IF(TEXT(Status__c ) = &quot;New&quot;, &quot;Nuevo&quot;, &quot;En Proceso&quot;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fase Lead</label>
    <type>Text</type>
</CustomField>