force-app/main/default/objects/AMCM__c/fields/MerchandiseType__c.field-meta.xml
<CustomField>
    <fullName>MerchandiseType__c</fullName>
    <description>Tipo de mercancía: Electrónica,GAE,Móviles,PAE</description>
    <label>Tipo de Mercancía</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MerchandiseType</valueSetName>
    </valueSet>
</CustomField>