force-app/main/default/objects/AMCM__c/fields/NoAnswer__c.field-meta.xml
<CustomField>
    <fullName>NoAnswer__c</fullName>
    <description>Campo autocalculado en función del resultado</description>
    <formula>ISPICKVAL( Result__c, &apos;No Contesta / Contestador&apos;)||
ISPICKVAL(Result__c, &apos;Teléfono Erróneo&apos;)||
ISPICKVAL(Result__c, &apos;Ilocalizable&apos;) ||
ISPICKVAL(Result__c, &apos;No Contesta Enviar Email&apos;)</formula>
    <label>No Contesta</label>
    <type>Checkbox</type>
</CustomField>