force-app/main/default/objects/AMCM__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Miembros de campaña AG</relationshipLabel>
    <relationshipName>Miembros_de_campa_a_gestionados</relationshipName>
    <type>Lookup</type>
</CustomField>