force-app/main/default/objects/AMCM__c/fields/OtherRiskData__c.field-meta.xml
<CustomField>
    <fullName>OtherRiskData__c</fullName>
    <description>Otros datos de riesgo</description>
    <label>Otros datos de riesgo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>