force-app/main/default/objects/AMCM__c/fields/Owner_cti_username__c.field-meta.xml
<CustomField>
    <fullName>Owner_cti_username__c</fullName>
    <formula>Owner:User.cti_username__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner_cti_username</label>
    <type>Text</type>
</CustomField>