force-app/main/default/objects/AMCM__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <description>Campo fórmula para pipeline.</description>
    <formula>IF(Opportunity__r.IsWon, &quot;06 - Contratado&quot;,
IF( NOT(ISBLANK( Opportunity__c )) &amp;&amp; NOT(Opportunity__r.IsClosed), &quot;05 - Gestión Comercial&quot;,
IF( Lead__r.IsConverted , &quot;04 - Útil&quot;,
IF( Lead__r.is_reachable__c = 1 , &quot;03 - Contactado&quot;,
IF( TEXT(Lead__r.Status) = &quot;New&quot;, &quot;01 - Nuevos&quot; , &quot;02 - En Proceso&quot; )
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pipeline</label>
    <type>Text</type>
</CustomField>