force-app/main/default/objects/AMCM__c/fields/QuoteCode__c.field-meta.xml
<CustomField>
    <fullName>QuoteCode__c</fullName>
    <description>Código del proyecto.</description>
    <label>Código de Proyecto</label>
    <length>20</length>
    <type>Text</type>
</CustomField>