force-app/main/default/objects/AMCM__c/fields/RecordedFileName__c.field-meta.xml
<CustomField>
    <fullName>RecordedFileName__c</fullName>
    <description>Ruta y fichero de la grabación manual de CTI.</description>
    <label>CTI Fichero de Grabación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>