force-app/main/default/objects/AMCM__c/fields/ReferenceCampaign__c.field-meta.xml
<CustomField>
    <fullName>ReferenceCampaign__c</fullName>
    <label>Campaña Registro Origen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>