force-app/main/default/objects/AMCM__c/fields/ReferenceSourceCess__c.field-meta.xml
<CustomField>
    <fullName>ReferenceSourceCess__c</fullName>
    <description>Origen CESS del lead de referencia</description>
    <label>Origen - CESS Registro Origen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>