force-app/main/default/objects/AMCM__c/fields/RelatedCTIAMCMId__c.field-meta.xml
<CustomField>
    <fullName>RelatedCTIAMCMId__c</fullName>
    <description>Para establecer la relación entre miembro de campaña AG adicional de tipo MKT y miembro de campaña CTI</description>
    <externalId>true</externalId>
    <label>Id de miembro de campaña CTI relacionado</label>
    <length>18</length>
    <type>Text</type>
</CustomField>