force-app/main/default/objects/AMCM__c/fields/RenewalDate__c.field-meta.xml
<CustomField>
    <fullName>RenewalDate__c</fullName>
    <description>Indica la fecha de renovación.</description>
    <label>Fecha de Renovación</label>
    <type>Date</type>
</CustomField>