force-app/main/default/objects/AMCM__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>Lista con valores a seleccionar del resultado.</description>
    <label>Resultado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CESSResultado</valueSetName>
    </valueSet>
</CustomField>