force-app/main/default/objects/AMCM__c/fields/ResultCTI__c.field-meta.xml
<CustomField>
    <fullName>ResultCTI__c</fullName>
    <description>Describe el último resultado de la CTI.</description>
    <label>Último Resultado CTI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>