force-app/main/default/objects/AMCM__c/fields/RiskAddress__c.field-meta.xml
<CustomField>
    <fullName>RiskAddress__c</fullName>
    <description>Domicilio de Riesgo</description>
    <label>Domicilio de Riesgo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>