force-app/main/default/objects/AMCM__c/fields/RiskBrand__c.field-meta.xml
<CustomField>
    <fullName>RiskBrand__c</fullName>
    <description>Muestra la marca.</description>
    <label>Marca</label>
    <length>120</length>
    <type>Text</type>
</CustomField>