force-app/main/default/objects/AMCM__c/fields/RiskBrandModel__c.field-meta.xml
<CustomField>
    <fullName>RiskBrandModel__c</fullName>
    <description>Describe el modelo y la marca por una fórmula donde concatena riskBrand + riskModel.</description>
    <formula>RiskBrand__c + &apos; &apos; +  RiskModel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modelo y Marca</label>
    <type>Text</type>
</CustomField>