force-app/main/default/objects/AMCM__c/fields/RiskCategory__c.field-meta.xml
<CustomField>
    <fullName>RiskCategory__c</fullName>
    <description>Muestra en texto la modalidad.</description>
    <label>Modalidad</label>
    <length>120</length>
    <type>Text</type>
</CustomField>