force-app/main/default/objects/AMCM__c/fields/RiskDescription__c.field-meta.xml
<CustomField>
    <fullName>RiskDescription__c</fullName>
    <description>Descripción del riesgo de seguro.</description>
    <label>Descripción del Riesgo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>