force-app/main/default/objects/AMCM__c/fields/RiskDriverBirthdate__c.field-meta.xml
<CustomField>
    <fullName>RiskDriverBirthdate__c</fullName>
    <description>Fecha de nacimiento del conductor del vehículo.</description>
    <label>Fecha Nacimiento de Conductor</label>
    <type>Date</type>
</CustomField>