force-app/main/default/objects/AMCM__c/fields/RiskDriverLicenseDate__c.field-meta.xml
<CustomField>
    <fullName>RiskDriverLicenseDate__c</fullName>
    <description>Muestra antigüedad del carnet del conductor.</description>
    <label>Fecha Carnet de Conductor</label>
    <type>Date</type>
</CustomField>