force-app/main/default/objects/AMCM__c/fields/RiskECICard__c.field-meta.xml
<CustomField>
    <fullName>RiskECICard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si tiene o no tarjeta de El Corte Inglés.</description>
    <label>Tarjeta ECI (S/N)</label>
    <type>Checkbox</type>
</CustomField>