force-app/main/default/objects/AMCM__c/fields/RiskExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>RiskExpirationDate__c</fullName>
    <description>Muestra fecha de fin.</description>
    <label>Fecha Vencimiento</label>
    <type>Date</type>
</CustomField>