force-app/main/default/objects/AMCM__c/fields/RiskGender__c.field-meta.xml
<CustomField>
    <fullName>RiskGender__c</fullName>
    <description>Indica el sexo.</description>
    <label>Sexo del Riesgo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>