force-app/main/default/objects/AMCM__c/fields/RiskInsuredBirthdate__c.field-meta.xml
<CustomField>
    <fullName>RiskInsuredBirthdate__c</fullName>
    <description>Muestra texto de la fecha del/los asegurado/s.</description>
    <label>Fecha Nacimiento Asegurado(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>