force-app/main/default/objects/AMCM__c/fields/RiskInsuredNumber__c.field-meta.xml
<CustomField>
    <fullName>RiskInsuredNumber__c</fullName>
    <description>Indica el número de asegurados.</description>
    <label>Número de Asegurados</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>