force-app/main/default/objects/AMCM__c/fields/RiskLocation__c.field-meta.xml
<CustomField>
    <fullName>RiskLocation__c</fullName>
    <description>Localidad</description>
    <label>Localidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>