force-app/main/default/objects/AMCM__c/fields/RiskModel__c.field-meta.xml
<CustomField>
    <fullName>RiskModel__c</fullName>
    <description>El modelo en concreto.</description>
    <label>Modelo</label>
    <length>120</length>
    <type>Text</type>
</CustomField>