force-app/main/default/objects/AMCM__c/fields/RiskOptionCapitalInsured__c.field-meta.xml
<CustomField>
    <fullName>RiskOptionCapitalInsured__c</fullName>
    <description>Opción/Capital Asegurado</description>
    <label>Opción/Capital Asegurado</label>
    <length>20</length>
    <type>Text</type>
</CustomField>