force-app/main/default/objects/AMCM__c/fields/RIskOwnerBirthdate__c.field-meta.xml
<CustomField>
    <fullName>RIskOwnerBirthdate__c</fullName>
    <description>Muestra la fecha de nacimiento del propietario.</description>
    <label>Fecha Nacimiento de Propietario</label>
    <type>Date</type>
</CustomField>