force-app/main/default/objects/AMCM__c/fields/RiskOwnerLicenseDate__c.field-meta.xml
<CustomField>
    <fullName>RiskOwnerLicenseDate__c</fullName>
    <description>Muestra antigüedad del carnet del propietario.</description>
    <label>Fecha Carnet de Propietario</label>
    <type>Date</type>
</CustomField>