force-app/main/default/objects/AMCM__c/fields/RiskPolicyHolderBirthdate__c.field-meta.xml
<CustomField>
    <fullName>RiskPolicyHolderBirthdate__c</fullName>
    <description>Muestra la fecha de nacimiento del tomador.</description>
    <label>Fecha Nacimiento de Tomador</label>
    <type>Date</type>
</CustomField>